apps/itzg/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minecraft-ingress
  namespace: minecraft
  annotations:
    tailscale.com/hostname: minecraft
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - minecraft
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minecraft-service
                port:
                  number: 25565
